--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "type":"module",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express-session": "^1.18.2",
