--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.10.0",
     "components": "^0.1.0",
-    "emoji-picker-react": "^4.13.3",
+    "emoji-picker-react": "^4.14.0",
     "express-rate-limit": "^8.1.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
