--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -10,7 +11,6 @@
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.10.0",
-    "components": "^0.1.0",
     "emoji-picker-react": "^4.14.0",
     "express-rate-limit": "^8.1.0",
     "multer": "^2.0.2",
@@ -21,9 +21,7 @@
     "react-router-dom": "^7.9.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
-    "scripts": "^0.1.0",
     "socket.io-client": "^4.8.1",
-    "styled": "^1.0.0",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "baseline-browser-mapping": "^2.9.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1"
   }
